// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sqitch package dependencies with resolved tags [simple-w-tags/1st] 1`] = `
{
  "deps": {
    "/deploy/schema_myapp.sql": [],
    "/deploy/table_products.sql": [
      "my-first:schema_myapp",
      "my-first:table_users",
    ],
    "/deploy/table_users.sql": [
      "my-first:schema_myapp",
    ],
  },
  "external": [],
  "resolved": [
    "schema_myapp",
    "table_users",
    "schema_myapp",
    "schema_myapp",
    "table_users",
    "table_products",
  ],
  "resolvedTags": {},
}
`;

exports[`sqitch package dependencies with resolved tags [simple-w-tags/2nd] 1`] = `
{
  "deps": {
    "/deploy/create_another_table.sql": [
      "my-second:create_table",
    ],
    "/deploy/create_schema.sql": [
      "my-first:table_users",
    ],
    "/deploy/create_table.sql": [
      "my-second:create_schema",
    ],
    "my-first:table_users": [],
  },
  "external": [
    "my-first:table_users",
    "my-first:table_users",
  ],
  "resolved": [
    "create_schema",
    "create_table",
    "create_schema",
    "create_table",
    "create_another_table",
  ],
  "resolvedTags": {},
}
`;

exports[`sqitch package dependencies with resolved tags [simple-w-tags/3rd] 1`] = `
{
  "deps": {
    "/deploy/create_schema.sql": [
      "my-first:table_products",
      "my-second:create_table",
    ],
    "/deploy/create_table.sql": [
      "my-third:create_schema",
      "my-second:create_another_table",
    ],
    "my-first:table_products": [],
    "my-second:create_another_table": [],
    "my-second:create_table": [],
  },
  "external": [
    "my-first:table_products",
    "my-second:create_table",
    "my-second:create_another_table",
  ],
  "resolved": [
    "create_schema",
    "create_table",
  ],
  "resolvedTags": {},
}
`;
